Fix for bug reported by Florian - Snu's are supposed to look for the LOC to use for the map by looking first at itself, even if the current Snu is named the same as the LOC that is being searched for.  This is different than keywords, which remove themselves from consideration when searching for keywords if the keyword lookup name is the same as the Snu in keyword.  Also, fixed the background color so it loads properly, because it was bothering me that it didn't work.  Also fixed the "restart/continue" screen so that it centers properly, without a black box covering it from the top (which looks bad when the background color is changed).  Definitely a few other small changes here and there, but not visible to the user.

--- a/main/src/css/base.css
+++ b/main/src/css/base.css
@@ -24,15 +24,22 @@ html, body {
 
 #continueScreen {
 	display: none;
-	background: black;
 	color: papayaWhip;
 	text-align: center;
 	box-sizing: border-box;
 	position: relative;
+	top: 35%;
+	width: 100%;
+	text-align: center;
 }
 
 #continueScreen .buttonContainer{
-	padding-top: 35%;
+	display:inline-block;
+	width:25em;
+	background-color:rgba(0, 0, 0, .65);
+	padding: 20px;
+	border-radius: 10px;
+	text-align: center;
 }
 
 #continueScreen .buttonContainer button {
@@ -40,6 +47,7 @@ html, body {
 	padding-right: 10px;
 	display: inline-block;
 }
+
 
 .SplashScreen {
 	cursor: pointer;
